Fixing link overflow

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ position:fixed;
 right:160px;
 top:0;
 height:110px;
+overflow:hidden;
 }
 
 #links a {
